[package]
name = "datx"
description = "Datx (Data Transform Toolbox) is a library and a command program that features a toolbox with a series of data transformation functionalities."
repository = "https://github.com/emuvi/datx/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.1"
edition = "2021"

[dependencies]
regex = "1"